# CodeDecrypto

./: CMakeLists.txt  README.txt  build_mingw32  build_mingw64
cmake/modules/: DetectMachine.cmake
src/: .directory  CMakeLists.txt  images.qrc  mainwindow.cpp  mainwindow.h  winicon.rc
src/ui/: mainwindow.ui
